# lesson-forge

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_token_usage.py
backend/: config.py  main.py
backend/api/: router.py  schemas.py
backend/db/: models.py  session.py
backend/knowledge/: pedagogy_kb.py
backend/services/: cag_service.py  template_service.py
backend/workflow/: agents.py  lesson_workflow.py
backend/workflow/steps/: curriculum_matcher.py  input_analyzer.py  pedagogy_retriever.py  resource_generator.py  teaching_router.py  template_resolver.py
data/: message.txt
data/pedagogy/: assessment_strategies.md  differentiation.md  explicit_instruction.md  inquiry_based_learning.md  mathematical_proficiencies.md
frontend/: app.js  index.html  style.css
scripts/: entrypoint.sh  seed_data.py  seed_knowledge.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py  test_routing_logic.py  test_schemas.py  test_template_service.py
